# algo3-tp3-cmf

./: .gitignore  CMakeLists.txt  Clique.h  DisjointSet.h  Eje.h  INFORME.md  README.MD  Utils.h  blocal.cpp  busqueda-local.cpp  busqueda-local.h  cmf-algo-exacto.cpp  cmf-algo-exacto.h  cmf-heuristica-blocal.cpp  cmf-heuristica-blocal.h  cmf-heuristica-constructiva-golosa.cpp  cmf-heuristica-constructiva-golosa.h  exacto  exacto.cpp  exacto_stdin.cpp  experimentos.cpp  grasp.cpp  grasp.h  graspv2.cpp  graspv2.h  hconstructiva.cpp  informeDeCambios.txt  meta-heuristica.cpp  meta-heuristica.h  mheuristica.cpp  mheuristica2.cpp  stringTokenizer.hpp
GRASP/: .gitignore
GRASP/src/: grasp.cpp
GRASP/test/profiling/cases/: complete_graph.py  dense_graph.py  example.py  utils.py
GRASP/test/profiling/notebooks/: Complete graphs error.ipynb  GRASP iteraciones.ipynb  blocal-mayor-grado.ipynb  exacto.ipynb  experimentos.ipynb  grasp.ipynb  hconstructiva-mayor-grado.ipynb
GRASP/test/profiling/results/: complete_graph.csv  complete_graph_exact.csv  dense_graph_exact.csv  example.csv  sparse_graph_exact.csv  very_dense_graph_exact.csv
GRASP/test/tools/: __init__.py  csv_tools.py  profiler.py
datos/: .tiempos-exacto-variando-m.csv.swp  .tiempos-exacto-variando-m.swp  comp-algoritmos-con-exacto-variando-m.csv  comp-algoritmos-sin-exacto-variando-k-caso-malo-blocal-hconstructiva.csv  comp-algoritmos-sin-exacto-variando-k-caso-malo-todos.csv  comp-algoritmos-sin-exacto-variando-m.csv  comp-algoritmos-sin-exacto-variando-n-caso-malo-hconstructiva-bueno-blocal.csv  comp-algoritmos-sin-exacto-variando-n-mcompleto.csv  frontera-grasp-variando-k-caso-malo.csv  frontera-todos-variando-n.csv  fronteras_caso_malo_blocal.csv  grasp-mayor-grado-variando-iterations.csv  grasp-mayor-grado-variando-rcl.csv  prom-acierto-blocal-con-heuristica-mayor-grado-variando-m.csv  prom-acierto-grasp-mayor-grado-variando-k-caso-malo.csv  prom-acierto-grasp-mayor-grado-variando-m.csv  prom-acierto-grasp-mayor-grado-variando-n-caso-bueno.csv  prom-acierto-hconstructiva-mayor-grado-variando-k-caso-malo.csv  prom-acierto-hconstructiva-mayor-grado-variando-m.csv  prom-acierto-hconstructiva-mayor-grado-variando-n-caso-bueno.csv  prom-acierto-todos-variando-m.csv  tiempos-blocal-mayor-grado-variando-m.csv  tiempos-blocal-mayor-grado-variando-n-m0.csv  tiempos-blocal-mayor-grado-variando-n-mcompleto.csv  tiempos-blocal-mayor-grado-variando-n.csv  tiempos-exacto-variando-m.csv  tiempos-exacto-variando-n-m0.csv  tiempos-exacto-variando-n-mcompleto.csv  tiempos-exacto-variando-n.csv  tiempos-grasp-mayor-grado-variando-m.csv  tiempos-grasp-mayor-grado-variando-n-m0.csv  tiempos-grasp-mayor-grado-variando-n-mcompleto.csv  tiempos-grasp-mayor-grado-variando-n.csv  tiempos-hconstructiva-mayor-grado-variando-m.csv  tiempos-hconstructiva-mayor-grado-variando-n-m0.csv  tiempos-hconstructiva-mayor-grado-variando-n-mcompleto.csv  tiempos-hconstructiva-mayor-grado-variando-n.csv  tiempos-todos-variando-m.csv  tiempos-todos-variando-n.csv  tiempos_caso_malo_blocal.csv
tests/cmf-algo-exacto/: entrada1
(+7 files in other folders)
